
   - myIScopeMap: is renamed from myIActionMap.
   - myScopeMapper: new class.
   - ofaDossierPrefs: deprecated class.
   - ofa_extender_collection_get_for_type(): does not return a new ref (todo #1341).
   - ofaExtenderModule: review loading/unloading the library.
   - ofaExtension: improve API v2.
   - ofa_idbdossier_meta_set_provider(): remove 'const' modifier from argument list.
   - ofaIGetter: review interface to be the only one which accesses to ofaHub (todo #1339).
   - ofaIRecover: new interface.
   - ofaISignalable: interface renamed from ofaISignalHub (todo #1342).
   - ofaISignaler: new interface (todo #1342).
   - ofaOpenPrefs: new class.
   - ofaRecoveryAssistant: new class.

-----------------------------------------------------------------------
 Version 0.65
 ============

 Released on 2017-01-29

 New features and improvements:

   Dossiers are identified by a Random Pseudo Identifier (RPID); this
   identifier is automatically generated - if not already set - when
   opening a current exercice.

   - Add a JSON header to backup archives.
   - Backups now manage several data streams, of which dossier and Openbook headers.
   - Backups now have a comment (todo #792).
   - DossierManager: delete an exercice (todo #1316).
   - DossierOpen: set the read-only flag when selecting a closed exercice (todo #1321).
   - ExerciceNew: create a new exercice.
   - ExerciceTreeview: automatically selects the first exercice (todo #1337).
   - Replace Backup standard dialog box with an assistant (todo #1317).
   - Restore assistant: implements restore protection rules (todo #1320).
   - Restore assistant: does not require user confirmation on new dossier (todo #1336).
   - UserPreferences: choose between reordering and detaching main tabs (todo #1147).

   + ofa-unzip: command-line utility to unarchive a data flow on stdout.

 Bug fixes:

   - some.

 Other changes:

   DBModel Core v34.
